# KoiVm

./: CMakeLists.txt  LICENSE  README.md
debug/: CMakeLists.txt  debug.cpp
include/virtual_machine/: full_adder.hpp  full_adder_circuit.hpp  gate.hpp
source/: full_adder.cpp  full_adder_circuit.cpp  gate.cpp
